# auth_service

./: .gitignore  Cargo.toml  README.md  example.env
adapter/: Cargo.toml
adapter/src/: lib.rs  modules.rs
adapter/src/model/: user.rs
adapter/src/persistence/: postgres.rs
adapter/src/repository/: mod.rs  user.rs
application/: Cargo.toml
application/src/model/: mod.rs  paginate.rs  user.rs
application/src/usecase/: user.rs
auth/: Cargo.toml
auth/src/startup/: server.rs
driver/: Cargo.toml
driver/src/: lib.rs
driver/src/context/: api_version.rs  mod.rs  request_helper.rs  response_helper.rs
driver/src/model/: email.rs  mod.rs  paginate.rs  user.rs
driver/src/module/: mod.rs
driver/src/routes/: errors.rs  user.rs
driver/src/startup/: mod.rs
kernel/: Cargo.toml
kernel/src/model/: mod.rs  paginate.rs  user.rs
kernel/src/repository/: user.rs
migrations/: 20240625160733_start.up.sql
